experiement_output/error_log/nondex-std29006-laboratorio-REST-java-gradle.log
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1367/wd/NonDex-plugin-test/github.com/std29006/laboratorio-REST-java-gradle/src/main/java/engtelecom/std/entities/Pessoa.java:3: error: package javax.xml.bind.annotation does not exist
import javax.xml.bind.annotation.XmlRootElement;
                                ^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1367/wd/NonDex-plugin-test/github.com/std29006/laboratorio-REST-java-gradle/src/main/java/engtelecom/std/entities/Pessoa.java:5: error: cannot find symbol
@XmlRootElement
 ^
  symbol: class XmlRootElement
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1367/wd/NonDex-plugin-test/github.com/std29006/laboratorio-REST-java-gradle/src/main/java/engtelecom/std/db/CampiDAO.java:5: error: package javax.xml.bind.annotation does not exist
import javax.xml.bind.annotation.XmlElement;
                                ^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1367/wd/NonDex-plugin-test/github.com/std29006/laboratorio-REST-java-gradle/src/main/java/engtelecom/std/db/CampiDAO.java:6: error: package javax.xml.bind.annotation does not exist
import javax.xml.bind.annotation.XmlRootElement;
                                ^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1367/wd/NonDex-plugin-test/github.com/std29006/laboratorio-REST-java-gradle/src/main/java/engtelecom/std/db/CampiDAO.java:10: error: cannot find symbol
@XmlRootElement
 ^
  symbol: class XmlRootElement
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1367/wd/NonDex-plugin-test/github.com/std29006/laboratorio-REST-java-gradle/src/main/java/engtelecom/std/entities/Campus.java:3: error: package javax.xml.bind.annotation does not exist
import javax.xml.bind.annotation.XmlRootElement;
                                ^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1367/wd/NonDex-plugin-test/github.com/std29006/laboratorio-REST-java-gradle/src/main/java/engtelecom/std/entities/Campus.java:7: error: cannot find symbol
@XmlRootElement
 ^
  symbol: class XmlRootElement
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1367/wd/NonDex-plugin-test/github.com/std29006/laboratorio-REST-java-gradle/src/main/java/engtelecom/std/entities/Bloco.java:3: error: package javax.xml.bind.annotation does not exist
import javax.xml.bind.annotation.XmlRootElement;
                                ^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1367/wd/NonDex-plugin-test/github.com/std29006/laboratorio-REST-java-gradle/src/main/java/engtelecom/std/entities/Bloco.java:7: error: cannot find symbol
@XmlRootElement
 ^
  symbol: class XmlRootElement
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1367/wd/NonDex-plugin-test/github.com/std29006/laboratorio-REST-java-gradle/src/main/java/engtelecom/std/entities/Laboratorio.java:5: error: package javax.xml.bind.annotation does not exist
import javax.xml.bind.annotation.XmlRootElement;
                                ^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1367/wd/NonDex-plugin-test/github.com/std29006/laboratorio-REST-java-gradle/src/main/java/engtelecom/std/entities/Laboratorio.java:7: error: cannot find symbol
@XmlRootElement
 ^
  symbol: class XmlRootElement
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1367/wd/NonDex-plugin-test/github.com/std29006/laboratorio-REST-java-gradle/src/main/java/engtelecom/std/db/CampiDAO.java:12: error: cannot find symbol
    @XmlElement(name = "campi")
     ^
  symbol:   class XmlElement
  location: class CampiDAO
12 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 6s
